// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocketSwitchEditTasksForm default values populates with default values 1`] = `
<div>
  <form
    aria-label="Grant Docket Switch Add Task"
    class="docket-switch-granted-add"
  >
    <section
      class="cf-app-segment cf-app-segment--alt"
      role="main"
    >
      <h1>
        Switch Docket: Add/Remove Tasks
      </h1>
      <div
        data-css-1sbm5ab=""
      >
        <p>
          <strong>
            You are switching from Direct Review to Hearing
          </strong>
        </p>
      </div>
      <div>
        <p>
          Below is a list of tasks that will remain open when you switch dockets. Tasks that are automatically created with the Hearing docket cannot be selected or removed. Please 
          <strong>
            unselect
          </strong>
           any tasks you would like to 
          <strong>
            remove
          </strong>
           (the remaining tasks will be transferred to the new docket) and 
          <strong>
            add
          </strong>
           any additional tasks that are needed.
        </p>
      </div>
      <fieldset
        class="checkbox-wrapper-taskIds cf-form-checkboxes cf-checkbox-group"
        data-css-1m1s8ka=""
      >
        <legend
          class=""
        >
          <strong>
            <span>
              Please unselect any tasks you would like to remove:
            </span>
          </strong>
        </legend>
        <div
          class="checkbox"
        >
          <input
            id="1"
            name="1"
            type="checkbox"
          />
          <label
            for="1"
          >
            Task Type A
          </label>
        </div>
        <div
          class="checkbox"
        >
          <input
            id="2"
            name="2"
            type="checkbox"
          />
          <label
            for="2"
          >
            Task Type B
          </label>
        </div>
        <div
          class="checkbox"
        >
          <input
            id="3"
            name="3"
            type="checkbox"
          />
          <label
            for="3"
          >
            Task Type C
          </label>
        </div>
      </fieldset>
      <fieldset
        class="checkbox-wrapper-mandatory cf-form-checkboxes cf-checkbox-group-inline"
        data-css-1m1s8ka=""
      >
        <legend
          class=""
        >
          <strong>
            <span>
              Task(s) that will automatically be created:
            </span>
          </strong>
        </legend>
        <div
          class="checkbox"
        >
          <input
            disabled=""
            id="DistributionTask"
            name="DistributionTask"
            type="checkbox"
          />
          <label
            for="DistributionTask"
          >
            Distribution Task
          </label>
        </div>
        <div
          class="checkbox"
        >
          <input
            disabled=""
            id="HearingTask"
            name="HearingTask"
            type="checkbox"
          />
          <label
            for="HearingTask"
          >
            Hearing Task
          </label>
        </div>
      </fieldset>
      <h3
        data-css-1m1s8ka=""
      >
        <br />
        <strong>
          Would you like to add any additional tasks?
        </strong>
        <br />
      </h3>
      <div>
        <div
          class="css-78wbnw"
        >
          <div
            class=""
          >
            <div
              class="cf-form-dropdown dropdown-newTasks[0].type"
            >
              <label
                class="question-label"
                for="new-tasks-0-type"
                id="new-tasks-0-type-label"
              >
                <span>
                  Select the type of task you'd like to open:
                </span>
              </label>
              <div
                class="cf-select"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <span
                    aria-live="polite"
                    class="css-1laao21-a11yText"
                  >
                    <p
                      id="aria-selection-event"
                    >
                       
                      
                    </p>
                    <p
                      id="aria-context"
                    >
                       
                        0 results available. Select is focused ,type to refine list, press Down to open the menu, 
                    </p>
                  </span>
                  <div
                    class="cf-select__control cf-select__control--is-focused css-1pahdxg-control"
                  >
                    <div
                      class="cf-select__value-container cf-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="cf-select__single-value css-1uccc91-singleValue"
                      >
                        AOJ
                      </div>
                      <div
                        class="css-81nyic-Input"
                      >
                        <div
                          class="cf-select__input"
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            aria-labelledby="new-tasks-0-type-label"
                            aria-owns="new-tasks-0-type-listbox"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="new-tasks-0-type"
                            role="combobox"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="cf-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="cf-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="cf-select__indicator cf-select__dropdown-indicator css-1gtu0rj-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="newTasks[0].type"
                    type="hidden"
                    value="aoj"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-78wbnw"
        >
          <div
            class="cf-form-textarea"
          >
            <label
              class="question-label"
              for="newTasks[0].instructions"
            >
              <span>
                Provide instructions and context for this action:
              </span>
            </label>
            <textarea
              id="newTasks[0].instructions"
              name="newTasks[0].instructions"
            >
              Lorem ipsum and whatnot
            </textarea>
          </div>
        </div>
        <div>
          <span>
            <button
              class="cf-submit cf-btn-link usa-button"
              type="button"
            >
              Remove this action
            </button>
          </span>
        </div>
      </div>
      <button
        class="cf-submit usa-button-secondary"
        data-css-byo489=""
        id="button-+-Add-task"
        type="button"
      >
        + Add task
      </button>
    </section>
    <div
      class="controls cf-app-segment"
    >
      <div
        data-css-63oe3q=""
      >
        <span>
          <button
            class="cf-right-side usa-button"
            data-css-wn5k45=""
            id="button-next-button"
            type="button"
          >
            Continue
          </button>
        </span>
        <button
          class="cf-btn-link usa-button"
          id="button-cancel-button"
          type="button"
        >
          Cancel
        </button>
        <button
          class="cf-right-side cf-prev-step usa-button-secondary usa-button"
          id="button-back-button"
          type="button"
        >
          Back
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`DocketSwitchEditTasksForm renders correctly 1`] = `
<div>
  <form
    aria-label="Grant Docket Switch Add Task"
    class="docket-switch-granted-add"
  >
    <section
      class="cf-app-segment cf-app-segment--alt"
      role="main"
    >
      <h1>
        Switch Docket: Add/Remove Tasks
      </h1>
      <div
        data-css-1sbm5ab=""
      >
        <p>
          <strong>
            You are switching from Direct Review to Hearing
          </strong>
        </p>
      </div>
      <div>
        <p>
          Below is a list of tasks that will remain open when you switch dockets. Tasks that are automatically created with the Hearing docket cannot be selected or removed. Please 
          <strong>
            unselect
          </strong>
           any tasks you would like to 
          <strong>
            remove
          </strong>
           (the remaining tasks will be transferred to the new docket) and 
          <strong>
            add
          </strong>
           any additional tasks that are needed.
        </p>
      </div>
      <fieldset
        class="checkbox-wrapper-taskIds cf-form-checkboxes cf-checkbox-group"
        data-css-1m1s8ka=""
      >
        <legend
          class=""
        >
          <strong>
            <span>
              Please unselect any tasks you would like to remove:
            </span>
          </strong>
        </legend>
        <div
          class="checkbox"
        >
          <input
            id="1"
            name="1"
            type="checkbox"
          />
          <label
            for="1"
          >
            Task Type A
          </label>
        </div>
        <div
          class="checkbox"
        >
          <input
            id="2"
            name="2"
            type="checkbox"
          />
          <label
            for="2"
          >
            Task Type B
          </label>
        </div>
        <div
          class="checkbox"
        >
          <input
            id="3"
            name="3"
            type="checkbox"
          />
          <label
            for="3"
          >
            Task Type C
          </label>
        </div>
      </fieldset>
      <fieldset
        class="checkbox-wrapper-mandatory cf-form-checkboxes cf-checkbox-group-inline"
        data-css-1m1s8ka=""
      >
        <legend
          class=""
        >
          <strong>
            <span>
              Task(s) that will automatically be created:
            </span>
          </strong>
        </legend>
        <div
          class="checkbox"
        >
          <input
            disabled=""
            id="DistributionTask"
            name="DistributionTask"
            type="checkbox"
          />
          <label
            for="DistributionTask"
          >
            Distribution Task
          </label>
        </div>
        <div
          class="checkbox"
        >
          <input
            disabled=""
            id="HearingTask"
            name="HearingTask"
            type="checkbox"
          />
          <label
            for="HearingTask"
          >
            Hearing Task
          </label>
        </div>
      </fieldset>
      <h3
        data-css-1m1s8ka=""
      >
        <br />
        <strong>
          Would you like to add any additional tasks?
        </strong>
        <br />
      </h3>
      <div />
      <button
        class="cf-submit usa-button-secondary"
        data-css-byo489=""
        id="button-+-Add-task"
        type="button"
      >
        + Add task
      </button>
    </section>
    <div
      class="controls cf-app-segment"
    >
      <div
        data-css-63oe3q=""
      >
        <span>
          <button
            class="cf-right-side usa-button"
            data-css-wn5k45=""
            id="button-next-button"
            type="button"
          >
            Continue
          </button>
        </span>
        <button
          class="cf-btn-link usa-button"
          id="button-cancel-button"
          type="button"
        >
          Cancel
        </button>
        <button
          class="cf-right-side cf-prev-step usa-button-secondary usa-button"
          id="button-back-button"
          type="button"
        >
          Back
        </button>
      </div>
    </div>
  </form>
</div>
`;
